Fix layout issues; Fix issue with 0.00 predictions

--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -24,11 +24,13 @@
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    background-color: var(--background-color);
+    background: linear-gradient(135deg, #1e1e1e, #2c3e50);
     color: var(--text-color);
     font-family: Roboto, Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    padding-top: 1rem;
+    min-height: 100vh;
 }
 
 * {
@@ -39,6 +41,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
+    margin-top: 1rem;
     @media (min-width: 1024px) {
         max-width: 70%;
         margin: 0 auto;
